<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="common_text"> 长春雨山公司</string> 

	    <!-- 版本更新 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    <string name="csy_close">关闭</string>	
	   
    <string name="wemall_useraddress">欢迎您,新用户,请点击这里设置您的收获地址</string>
    <string name="wemall_usercentername">远程拼车</string>
    <string name="new_version">版本升级</string>    
    <string name="app_name">雨山代理</string>
    <string name="net_stat">网络连接异常,请检查网络连接</string>       
    <string name="city_name_from">从哪出发</string>
    <string name="city_name_go">到哪儿去</string>
        
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉载入更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="wemall_regist_btn_text">一 键 登 陆</string>
    <string name="wemall_exit">退出应用</string>
    <string name="wemall_about">关于应用</string>
    <string name="wemall_ok">确定</string>
    <string name="wemall_cancel">取消</string>
    <string name="wemall_back">返回</string>   
    <string name="wemall_gpl">使用许可</string>
    <string name="wemall_login_account">帐号</string>
    <string name="wemall_login_account_hint">请输入手机号</string>
    <string name="wemall_version">1.0</string>   
    <string name="wemall_ordercenter">我的订单</string>
    <string name="wemall_usercenterpurse">我的资金</string>
    <string name="wemall_usercenterclean">违章查询</string>
    <string name="wemall_usercenterlogout">注销账户</string>
    <string name="wemall_usercenterchangepasswd">修改密码</string>
    <string name="wemall_usercenterbankcar">绑定银行卡</string>
    <string name="wemall_usercentercollect">收藏中心</string>
    <string name="wemall_regist_name">用&#160;&#160;户&#160;&#160;名</string>
    <string name="wemall_car_name">车&#160;&#160;牌&#160;&#160;号</string>  
    <string name="wemall_car_chexing">车&#160;&#160;型&#160;&#160;</string>
    <string name="wemall_car_name_chexing">如:&#160;&#160;上&#160;&#160;海&#160;&#160;大&#160;&#160;众&#160;&#160;</string>    
    <string name="wemall_regist_name_hint">请输入真实姓名</string>
    <string name="wemall_car_name_hint">请输入真实的车牌号</string>
    
    <string name="wemall_regist_phone">手&#160;&#160;机&#160;&#160;号</string>
    <string name="wemall_regist_phone_hint">请输入手机号</string>
    <string name="wemall_regist_passwd">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="wemall_regist_passwd_hint">请输入密码,至少六位</string>
    <string name="wemall_regist_passwd_repeat">重复密码</string>
    <string name="wemall_regist_passwd_repeat_hint">重复密码</string>
    <string name="wemall_one_key_regist">一键注册</string>
    <string name="wemall_one_key_login">一键登录</string>
    <string name="wemall_regist_clause_t">同意</string>
    <string name="wemall_regist_clause">用户使用条款</string>
    <string name="wemall_one_key_regist2">注册</string>
    <string name="wemall_forgetpasswd">忘记密码</string>
    <string name="wemall_login_passwd">密码</string>
    <string name="wemall_login_passwd_hint">请输入密码</string>
    <string name="wemall_changepasswd_old">当前密码</string>
    <string name="wemall_changepasswd_new">新&#160;&#160;密&#160;&#160;码</string>
    <string name="wemall_changepasswd_button">修改密码</string>
    <string name="wemall_recoverypasswd_button">重置密码</string>
    <string name="wemall_changepasswd_old_hint">请输入当前密码</string>
    <string name="wemall_changepasswd_new_hint">请输入新的密码</string>
    <string name="wemall_changepasswd_new_re_hint">请重复新的密码</string>
    <string name="wemall_neterrtip">网络好像不通，请稍后再试</string>
    <string name="wemall_versiontop">当前版本为最新版，请放心使用</string>
    <string name="wemall_downloading">正在下载升级包，下载完毕将会自动安装，请稍侯......</string>   
    <string name="ystaxi_gpl">使用程序需要严格遵守相关法律法规,不可以用于其它不正当的活动</string>   

    <!-- 对话框 -->
    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dismiss">隐藏</string>

</resources>
