<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white_ffffff">

    <LinearLayout
        android:id="@+id/loginallitem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18.0dip"
        android:layout_marginRight="18.0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="0.0dp"
            android:layout_marginRight="0.0dp"
            android:layout_marginTop="22dp" >

            <TextView
                android:id="@+id/tv_country_num"
                android:layout_width="70dip"
                android:layout_height="match_parent"
                android:background="@drawable/wemall_input_bg_focus"
                android:gravity="center"
                android:paddingTop="15dip"
                android:text="@string/wemall_login_account"
                android:textColor="#ff353535"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/wemall_input_bg_special_focus" >

                <EditText
                    android:id="@+id/wemall_login_account"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/wemall_login_account_hint"
                    android:inputType="phone"
                    android:paddingTop="15dip"
                    android:textColor="#ff353535"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="0.0dp"
            android:layout_marginRight="0.0dp"
            android:layout_marginTop="22dp" >

            <TextView
                android:id="@+id/login_passwd_t"
                android:layout_width="70dip"
                android:layout_height="match_parent"
                android:background="@drawable/wemall_input_bg_focus"
                android:gravity="center"
                android:paddingTop="15dip"
                android:text="@string/wemall_login_passwd"
                android:textColor="#ff353535"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/wemall_input_bg_special_focus" >

                <EditText
                    android:id="@+id/wemall_login_passwd"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/wemall_login_passwd_hint"
                    android:inputType="textPassword"
                    android:paddingTop="15dip"
                    android:textColor="#ff353535"
                    android:textSize="15sp" />
               
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="30.0dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/wemall_login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/wemall_background_green"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/wemall_one_key_login"
                android:textColor="@color/white_ffffff"
                android:textSize="16.0sp" />
        </LinearLayout>
        
 <!--        <TextView
                android:id="@+id/canuse_button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/wemall_background_green"
                android:clickable="true"
                android:gravity="center"
                android:text="审验状态"
                android:textColor="@color/white_ffffff"
                android:textSize="16.0sp" /> -->
        
    </LinearLayout>

</ScrollView>